@@ -1,5 +1,6 @@
 1 September 2016: Wouter
 	- RFC 7958 is now out, updated docs for unbound-anchor.
+	- Fix for compile without warnings with openssl 1.1.0.
 
 29 August 2016: Wouter
 	- Fix #777: OpenSSL 1.1.0 compatibility, patch from Sebastian A.
